--- a/manifest.json
+++ b/manifest.json
@@ -25,7 +25,7 @@
         ],
         "start_url": "index.html",
         "display": "standalone",
-        "background_color": "#3E4EB8",
-        "theme_color": "#2F3BA2",
+        "background_color": "lightseagreen",
+        "theme_color": "#333d3f",
         "gcm_sender_id": "103953800507"
     }
