--- a/manifest.json
+++ b/manifest.json
@@ -1,31 +1,38 @@
-    {
-        "name": "WorkFit",
-        "short_name": "WorkFit",
-        "icons": [{
-                "src": "assets/icons/icon-128x128.png",
-                "sizes": "128x128",
-                "type": "image/png"
-            }, {
-                "src": "assets/icons/icon-144x144.png",
-                "sizes": "144x144",
-                "type": "image/png"
-            }, {
-                "src": "assets/icons/icon-152x152.png",
-                "sizes": "152x152",
-                "type": "image/png"
-            }, {
-                "src": "assets/icons/icon-192x192.png",
-                "sizes": "192x192",
-                "type": "image/png"
-            }, {
-                "src": "assets/icons/icon-256x256.png",
-                "sizes": "256x256",
-                "type": "image/png"
-            }
-        ],
-        "start_url": "index.html",
-        "display": "standalone",
-        "background_color": "lightseagreen",
-        "theme_color": "#333d3f",
-        "gcm_sender_id": "103953800507"
-    }
+{
+  "name": "WorkFit",
+  "short_name": "WorkFit",
+  "icons": [{
+    "src": "assets/icons/icon-32x32.png",
+    "sizes": "32x32",
+    "type": "image/png"
+  },{
+    "src": "assets/icons/workfit-128x128.png",
+    "sizes": "128x128",
+    "type": "image/png"
+  }, {
+    "src": "assets/icons/workfit-144x144.png",
+    "sizes": "144x144",
+    "type": "image/png"
+  }, {
+    "src": "assets/icons/workfit-152x152.png",
+    "sizes": "152x152",
+    "type": "image/png"
+  }, {
+    "src": "assets/icons/workfit-192x192.png",
+    "sizes": "192x192",
+    "type": "image/png"
+  }, {
+    "src": "assets/icons/workfit-256x256.png",
+    "sizes": "256x256",
+    "type": "image/png"
+  }, {
+    "src": "assets/icons/workfit-512x512.png",
+    "sizes": "512x512",
+    "type": "image/png"
+  }],
+  "start_url": "index.html",
+  "display": "standalone",
+  "background_color": "lightseagreen",
+  "theme_color": "#333d3f",
+  "gcm_sender_id": "103953800507"
+}
